--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <p style="font-family: 'Montserrat', Arial, sans-serif; font-weight: bold; margin:1px; padding: 0; font-size: 2rem;">
                     Translate faster, waste less time & tokens.
                 </p>
-				<img class="preview-img" src="ad image.png" alt="ReSplitter Preview" style="margin:1px; padding: 0;">
+				<img class="preview-img" src="img/image.png" alt="ReSplitter Preview" style="margin:1px; padding: 0;">
 				<p style="margin:1px; padding: 0;">(The results in the image are a real case, the folder used only contains 2,260 translatable lines)</p>
 			</div>
 		</section>
@@ -378,3 +378,4 @@
 	</footer>
 </body>
 </html>
+
