--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 </head>
 <body>
 	<header>
-    <img src="logo.png" alt="ReSplitter logo" style="width:340px; height:auto;">
+    <img src="img/logo.png" alt="ReSplitter logo" style="width:340px; height:auto;">
 	</header>
 	<main style="max-width:900px;margin:0 auto;padding:0 16px;">
 		<section style="margin-top:1.5em; margin-bottom:0px;">
@@ -196,7 +196,7 @@
                 <p style="font-family: 'Montserrat', Arial, sans-serif; font-weight: bold; margin:1px; padding: 0; font-size: 2rem;">
                     Translate faster, waste less time & tokens.
                 </p>
-				<img class="preview-img" src="img/image.png" alt="ReSplitter Preview" style="margin:1px; padding: 0;">
+				<img class="preview-img" src="img/ad image.png" alt="ReSplitter Preview" style="margin:1px; padding: 0;">
 				<p style="margin:1px; padding: 0;">(The results in the image are a real case, the folder used only contains 2,260 translatable lines)</p>
 			</div>
 		</section>
@@ -326,7 +326,7 @@
                            See duplicate lines only once and translate every occurrence in the selected file or folder.
 						   in the selected file/folder.</p>
 					</div>
-					<img class="feature-img" src="files.png" alt="Feature 1 image">
+					<img class="feature-img" src="img/files.png" alt="Feature 1 image">
 				</div>
 				<div class="feature">
 					<div class="feature-content">
@@ -336,7 +336,7 @@
 							that you dont want to translate.</p>
 						<p>The default filters can reduce the visible lines to translate by up to 70%.</p>
 					</div>
-					<img class="feature-img" src="filters.png">
+					<img class="feature-img" src="img/filters.png">
 				</div>
 				<div class="feature">
 					<div class="feature-content">
@@ -345,7 +345,7 @@
 						<p>Choose over 3 modes<br>Extension, Manual or API.</p>
 						<p>All the options are free to use, buy ReSplitter and have free translations forever.</p>
 					</div>
-					<img class="feature-img" src="buttons.png">
+					<img class="feature-img" src="img/buttons.png">
 				</div>
 			</div>
 		</section>
@@ -363,12 +363,12 @@
 		<section>
 			<h2 style="text-align:center;margin-bottom:24px;">Gallery</h2>
 			<div class="gallery-images" style="display:flex;flex-direction:column;align-items:center;gap:48px;">
-				<img src="8.png" alt="Gallery Image 1" style="width:90vw;max-width:980px;min-width:240px;border-radius:18px;box-shadow:0 4px 32px #0008;object-fit:contain;">
-				<img src="6.png" alt="Gallery Image 1" style="width:90vw;max-width:980px;min-width:240px;border-radius:18px;box-shadow:0 4px 32px #0008;object-fit:contain;">
-				<img src="2.png" alt="Gallery Image 1" style="width:90vw;max-width:980px;min-width:240px;border-radius:18px;box-shadow:0 4px 32px #0008;object-fit:contain;">
-				<img src="1.png" alt="Gallery Image 2" style="width:90vw;max-width:980px;min-width:240px;border-radius:18px;box-shadow:0 4px 32px #0008;object-fit:contain;">
-				<img src="3.png" alt="Gallery Image 2" style="width:90vw;max-width:980px;min-width:240px;border-radius:18px;box-shadow:0 4px 32px #0008;object-fit:contain;">
-				<img src="4.png" alt="Gallery Image 2" style="width:90vw;max-width:980px;min-width:240px;border-radius:18px;box-shadow:0 4px 32px #0008;object-fit:contain;">
+				<img src="img/8.png" alt="Gallery Image 1" style="width:90vw;max-width:980px;min-width:240px;border-radius:18px;box-shadow:0 4px 32px #0008;object-fit:contain;">
+				<img src="img/6.png" alt="Gallery Image 1" style="width:90vw;max-width:980px;min-width:240px;border-radius:18px;box-shadow:0 4px 32px #0008;object-fit:contain;">
+				<img src="img/2.png" alt="Gallery Image 1" style="width:90vw;max-width:980px;min-width:240px;border-radius:18px;box-shadow:0 4px 32px #0008;object-fit:contain;">
+				<img src="img/1.png" alt="Gallery Image 2" style="width:90vw;max-width:980px;min-width:240px;border-radius:18px;box-shadow:0 4px 32px #0008;object-fit:contain;">
+				<img src="img/3.png" alt="Gallery Image 2" style="width:90vw;max-width:980px;min-width:240px;border-radius:18px;box-shadow:0 4px 32px #0008;object-fit:contain;">
+				<img src="img/4.png" alt="Gallery Image 2" style="width:90vw;max-width:980px;min-width:240px;border-radius:18px;box-shadow:0 4px 32px #0008;object-fit:contain;">
 			</div>
 		</section>
 		<hr class="divider">
@@ -378,4 +378,5 @@
 	</footer>
 </body>
 </html>
+
 
