--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 		<section style="margin:auto 3.5rem auto 3.5rem;">
             	<div style="max-width:600px;margin:32px auto 0 auto;">
 					<div style="text-align:center;">
-						<img src="logo.png" alt="ReSplitter logo" style="width:140px; height:auto;">
+						<img src="img/logo.png" alt="ReSplitter logo" style="width:140px; height:auto;">
 					</div>
 					<span style="display:inline-block; text-align:center; width:100%; font-size:1.1rem; color:#707070; font-weight:600; margin:1px 0 1px 0;">
 						Same result, less time, less lines.
@@ -378,5 +378,6 @@
 	</footer>
 </body>
 </html>
+
 
 
